# fux

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DOGFOOD.md  LICENSE  README.md  install.sh  justfile  pyproject.toml  schema.json
.claude/: settings.local.json
.fux/debates/: con-amendment-v2.md  con-amendment.md
.fux/rules/: con-amendment-v2.md  con-amendment.md  con-probe-ratify.md
.github/: CODEOWNERS  branch-protection.json
.github/workflows/: audit-protection.yml  ci.yml  publish.yml
archive/: .gitmessage-claude  CLAUDE.md  README.md  pyproject.toml
archive/docs/: batch-ingest-handoff.md  batch-ingest-prompt.md  cli.md  decision-capture-prompt.md  fux-claude-code-prompt-error-handling.md  fux-claude-code-prompt-renderer-foundation.md  fux-fleet-vision.md  fux-implementation.md  fux-plan.md  fux-roadmap-implementation-spec.md  fux-vs-graphify-parity-matrix.md  graph-viewer-design-brief.md  handoff-01-parity-command.md  handoff-02-multi-assistant.md  handoff-04-org-connectors.md  implementation-notes.md  marketing-plan.md  model-handoff-interview.md  prompt-01-parity-command.md  prompt-03-graph-scale.md  remaining-backlog-handoff.md  remaining-backlog-prompt.md  rule-proposer.md  scrape-howto-cli-prompt.md
archive/docs/handoff/: constitution-verification-handoff.md
archive/fux/: __init__.py  __main__.py  astextract.py  cage_receipt.py  cdp_utils.py  cliconstitution.py  cligraph.py  clihelp.py  cliquery.py  cliutil.py  components.py  constatus.py  constitution.py  costledger.py  coverage.py  embed.py  fetchrules.py  findings.py  frontmatter.py  gate.py  gitutil.py  globs.py  graph.py  hooks.py  howto.py  index.py  ingest.py  ingestconnector.py  loader.py  narrative.py  paths.py  proposer.py  scaffold.py  schema.py  stats.py  touch.py  usage.py  vexamples.py
archive/fux/data/: schema.json
archive/fux/data/global/rules/: doc-per-code-change.md  no-secrets-in-vcs.md
archive/fux/data/hooks/: _common.sh  post_tool_use.sh  session_start.sh  stop.sh  user_prompt_submit.sh
archive/fux/data/packs/indian-markets-tax/: pack.toml
archive/fux/data/skills/adr/: SKILL.md
archive/fux/data/skills/critic/: SKILL.md
archive/fux/data/skills/debate/: SKILL.md
archive/fux/data/skills/fetch-rules/: SKILL.md
archive/fux/data/skills/propose-rules/: SKILL.md
archive/fux/data/skills/savings/: SKILL.md
archive/fux/templates/: formula.md
archive/scripts/: ai-review.sh  apply-branch-protection.sh
archive/tests/: conftest.py  test_bm25f_expand.py  test_constitution_provenance.py  test_crossfile_calls.py  test_errors.py  test_frontmatter.py  test_graph_determinism.py  test_hybrid.py  test_ingest_batch.py  test_mcp.py  test_mcp_extra.py  test_no_llm_imports.py  test_pii_scan.py  test_resolution.py  test_seal.py  test_serve_sanitize.py  test_verify_hardening.py
archive/tools/skillgen/: gen.py
archive/tools/skillgen/expected/: fux__data__skills__fux__SKILL.md
docs/: DOC-REGISTRY.md  GLOSSARY.md  IMPLEMENTATION.md  INTERVIEW.md  PLAN.md  WORKLOG.md  architecture-flow.mermaid  architecture.md  cli-examples.md  cli.md  constitution-enforcement-handoff.md  constitution-enforcement-prompts.md  constitution-handoff.md  constitution-prompts.md  constitution-verification-handoff.md  constitution-verification-prompts.md  decision-capture-handoff.md  fux-handoff-error-handling.md  fux-handoff-renderer-foundation.md  fux-implementation.md  fux-lab-claude-code-prompt.md  fux-lab-handoff.md  fux-plan.md  fux-test-repo-plan.md  fux-toml.md  global-rules-home.compare.md  graph-viewer-design-brief.md  graph-viewer-improvements-handoff.md  graphify-obsidian-inspiration.md  guide.md  handoff-03-graph-scale.md  implementation-notes.md  implementation.md  index.md  ingest-files-handoff.md  marketing-plan.md  model-handoff-interview.md  prompt-00-orchestrator.md  prompt-02-multi-assistant.md  prompt-03a-viewer-scale.md  (+10 more)
docs/adr/: 0001-config-and-setup.md  0002-ingest-cache-chunker.md  0003-bm25f-index-query-surface.md  0004-agent-integration.md  0005-web-cdp-advanced-tier.md  0006-bundled-model.md  0007-rrf-hybrid-fusion.md  0008-substrate-store-lock-state.md  0009-retrieval-kernel-graph-verbs.md  0010-fuxvec-binary-dense-search.md  TEMPLATE.md  (+5 more)
fux/: __init__.py  astextract.py  baseline.py  bench.py  build.py  candidates.py  capture.py  cdp_utils.py  check.py  cli.py  clicmds.py  cliconstitution.py  cligraph.py  cliquery.py  cliutil.py  community.py  config.py  constatus.py  constitution.py  context.py  costledger.py  coverage.py  critic.py  criticllm.py  criticloop.py  decisioncapture.py  drift.py  errors.py  explain.py  feedback.py  findings.py  fix.py  fmwrite.py  gate.py  gitutil.py  governance.py  graph.py  graphhtml.py  graphquery.py  hookinstall.py  (+36 more)
global/: README.md
hooks/: post_tool_use.sh  session_start.sh  user_prompt_submit.sh
probes/: Probes.md  ui_fux_graph_probe.py
scripts/: ai-review.sh  audit-branch-protection.sh  git-identity-claude.sh
tests/: conftest.py  test_advanced.py  test_agents.py  test_answer.py  test_ast_backend.py  test_astextract.py  test_bm25f.py  test_cage_receipt.py  test_capture_governance.py  test_cat_and_tier.py  test_centrality.py  test_check_fix.py  test_chunker.py  test_components.py  test_config.py  test_constitution_integrity.py  test_constitution_status.py  test_constitution_tier.py  test_convert.py  test_costledger.py  test_critic_loop.py  test_critic_split.py  test_debug.py  test_decision_capture.py  test_df_sidecar.py  test_doctor.py  test_edge_confidence.py  test_embed.py  test_embed_rerank.py  test_errors.py  test_examples.py  test_feedback.py  test_fetch_rules.py  test_frontmatter.py  test_fuxvec.py  test_fuzz_mine.py  test_globs.py  test_graph.py  test_graph_drift.py  test_graph_lod_profile.py  (+40 more)
tests_e2e/: conftest.py  manual_cdp_smoke.py  test_agent_files.py  test_clone.py  test_determinism.py  test_doctor_flow.py  test_drift.py  test_eval.py  test_flow.py  test_packaging.py  test_relational.py  test_sqlite_parity.py  test_web_flow.py  test_why_flow.py
tools/: bench.py  synth_corpus.py
(+270 files in other folders)
